feat: hide return option when returnInvoice is disabled in POSsettings

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -55,7 +55,13 @@
       "label": "Is POS Shift Open",
       "fieldtype": "Check",
       "default": false,
-      "hidden": true,
+      "hidden": true
+    },
+    {
+      "fieldname": "returnInvoice",
+      "label": "Return Invoice",
+      "fieldtype": "Check",
+      "default": true,
       "section": "Default"
     },
     {
