fix: set isShiftOpen field to be hidden by default

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -55,7 +55,7 @@
       "label": "Is POS Shift Open",
       "fieldtype": "Check",
       "default": false,
-      "hidden": false,
+      "hidden": true,
       "section": "Default"
     },
     {
