fix: allow selecting a default account in POS transactions

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -58,6 +58,15 @@
       "hidden": true
     },
     {
+      "fieldname": "defaultAccount",
+      "label": "default Account",
+      "fieldtype": "Link",
+      "create": true,
+      "required": true,
+      "target": "Account",
+      "section": "Default"
+    },
+    {
       "fieldname": "weightEnabledBarcode",
       "label": "Weigth Enabled Barcode",
       "fieldtype": "Check",
