fix: correct labels and return invoice amount in POS

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -68,7 +68,7 @@
     },
     {
       "fieldname": "weightEnabledBarcode",
-      "label": "Weigth Enabled Barcode",
+      "label": "Weight Enabled Barcode",
       "fieldtype": "Check",
       "default": false,
       "section": "Barcode"
