fix: preserve date and time in pricing rules in salesinvoice

--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
   "prettier": {
     "semi": true,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "endOfLine": "auto"
   },
   "homepage": "https://frappe.io/books",
   "repository": {
