Fix:quantity-based and amount-based discount & resolve payment amount issue

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -59,7 +59,7 @@
     },
     {
       "fieldname": "weightEnabledBarcode",
-      "label": "Weigth Enabled Barcode",
+      "label": "weight Enabled Barcode",
       "fieldtype": "Check",
       "default": false,
       "section": "Barcode"
