upd: update schema to support Sync Interval in minutes

--- a/schemas/app/ERPNextSyncSettings.json
+++ b/schemas/app/ERPNextSyncSettings.json
@@ -39,10 +39,10 @@
       "section": "Default"
     },
     {
-      "label": "Data Sync Interval",
+      "label": "Data Sync Interval (In Minutes)",
       "fieldname": "dataSyncInterval",
-      "fieldtype": "Int",
-      "readOnly": true,
+      "fieldtype": "Data",
+      "default": "60",
       "section": "Default"
     },
     {
