feat: schedule ERPNext data sync using Bree cron jobs

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@codemirror/lang-vue": "^0.1.1",
     "@popperjs/core": "^2.10.2",
     "better-sqlite3": "^9.2.2",
+    "bree": "^9.2.4",
     "codemirror": "^6.0.1",
     "core-js": "^3.19.0",
     "electron-store": "^8.0.1",
