feat: add worker for cron job and trigger frontend action to sync data with ERPNext

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,8 @@
     "reports/**/*.ts",
     "utils/**/*.ts",
     "tests/**/*.ts",
-    "dummy/**/*.ts"
+    "dummy/**/*.ts",
+    "jobs/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
