feat: enable batch usage without inventory tracking

--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -129,6 +129,13 @@
       "section": "Features"
     },
     {
+      "fieldname": "enablePointOfSale",
+      "label": "Enable Point of Sale",
+      "fieldtype": "Check",
+      "default": false,
+      "section": "Features"
+    },
+    {
       "fieldname": "fiscalYearStart",
       "label": "Fiscal Year Start Date",
       "fieldtype": "Date",
