--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -14,6 +14,14 @@
       "section": "Default"
     },
     {
+      "fieldname": "posProfile",
+      "label": "POS Profile",
+      "fieldtype": "Link",
+      "target": "POSProfile",
+      "create": true,
+      "section": "Default"
+    },
+    {
       "fieldname": "cashAccount",
       "label": "Counter Cash Account",
       "fieldtype": "Link",
@@ -128,7 +136,7 @@
     },
     {
       "fieldname": "canEditDiscount",
-      "label": "Can Edit Discount",
+      "label": "Can Change Discount",
       "fieldtype": "Check",
       "default": false,
       "section": "Default"
