--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -122,6 +122,13 @@
       "section": "Features"
     },
     {
+      "fieldname": "enableItemEnquiry",
+      "label": "Enable Item Enquiry",
+      "fieldtype": "Check",
+      "default": true,
+      "section": "Features"
+    },
+    {
       "fieldname": "enableLoyaltyProgram",
       "label": "Enable Loyalty Program",
       "fieldtype": "Check",
