fix: simplify item enquiry

--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -125,7 +125,7 @@
       "fieldname": "enableItemEnquiry",
       "label": "Enable Item Enquiry",
       "fieldtype": "Check",
-      "default": true,
+      "default": false,
       "section": "Features"
     },
     {
