fix: filter Item Visibility

--- a/schemas/app/inventory/InventorySettings.json
+++ b/schemas/app/inventory/InventorySettings.json
@@ -13,6 +13,24 @@
       "section": "Default"
     },
     {
+      "fieldname": "itemVisibility",
+      "label": "Item Visibility",
+      "fieldtype": "Select",
+      "options": [
+        {
+          "value": "Inventory Items",
+          "label": "Inventory Items"
+        },
+        {
+          "value": "Non-Inventory Items",
+          "label": "Non-Inventory Items"
+        }
+      ],
+      "default": "Non-Inventory Items",
+      "required": true,
+      "section": "Default"
+    },
+    {
       "fieldname": "stockInHand",
       "label": "Stock In Hand Acc.",
       "fieldtype": "Link",
